corrects uneven distribution of projects across columns

--- a/style/style.css
+++ b/style/style.css
@@ -277,6 +277,7 @@ a.home:active {
 .project-container {
   position: relative;
   width: 100%;
+  display:inline-block;
 }
 
 .overlay {
